{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 274,
  "lineage": "5946de27-557f-5228-623b-f873aba52dee",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_all_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-08-15T20:57:51.312-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hashicorp-393022/global/firewalls/nomad-allow-all-internal",
            "log_config": [],
            "name": "nomad-allow-all-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/networks/hashistack-nomad",
            "priority": 1000,
            "project": "hashicorp-393022",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/firewalls/nomad-allow-all-internal",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "auto-join"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.hashistack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "clients_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-15T20:57:51.149-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hashicorp-393022/global/firewalls/nomad-clients-ingress",
            "log_config": [],
            "name": "nomad-clients-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/networks/hashistack-nomad",
            "priority": 1000,
            "project": "hashicorp-393022",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/firewalls/nomad-clients-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "nomad-clients"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.hashistack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "consul_nomad_ui_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "4646"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8500"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-15T20:57:51.374-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hashicorp-393022/global/firewalls/nomad-ui-ingress",
            "log_config": [],
            "name": "nomad-ui-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/networks/hashistack-nomad",
            "priority": 1000,
            "project": "hashicorp-393022",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/firewalls/nomad-ui-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.hashistack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-15T20:57:50.854-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hashicorp-393022/global/firewalls/nomad-ssh-ingress",
            "log_config": [],
            "name": "nomad-ssh-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/networks/hashistack-nomad",
            "priority": 1000,
            "project": "hashicorp-393022",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/firewalls/nomad-ssh-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.hashistack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/images/hashistack-20230815075041",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/zones/us-east1-b/disks/nomad-client-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hashicorp-393022/zones/us-east1-b/instances/nomad-client-0",
            "instance_id": "897079557271713711",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "rs1JzvH6_Wg=",
            "metadata_startup_script": "#!/bin/bash\n\nset -e\n\nexec \u003e \u003e(sudo tee /var/log/user-data.log|logger -t user-data -s 2\u003e/dev/console) 2\u003e\u00261\nsudo bash /ops/shared/scripts/client.sh \"gce\" 'project_name=hashicorp-393022 provider=gce tag_value=auto-join' \"https://releases.hashicorp.com/nomad/0.10.0/nomad_0.10.0_linux_amd64.zip\"\n\nNOMAD_HCL_PATH=\"/etc/nomad.d/nomad.hcl\"\nCLOUD_ENV=\"gce\"\n\nsed -i \"s/CONSUL_TOKEN/83a94b86-e145-b1e3-00d9-aca8e09caf30/g\" $N [...]
            "name": "nomad-client-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.237.132.152",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/networks/hashistack-nomad",
                "network_ip": "10.142.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/regions/us-east1/subnetworks/hashistack-nomad",
                "subnetwork_project": "hashicorp-393022"
              }
            ],
            "project": "hashicorp-393022",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/zones/us-east1-b/instances/nomad-client-0",
            "service_account": [
              {
                "email": "768276668000-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/logging.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "auto-join",
              "nomad-clients"
            ],
            "tags_fingerprint": "JjcUkMz5Nmg=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.hashistack"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/images/hashistack-20230815075041",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/zones/us-east1-b/disks/nomad-client-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hashicorp-393022/zones/us-east1-b/instances/nomad-client-1",
            "instance_id": "1137925831284357072",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "rs1JzvH6_Wg=",
            "metadata_startup_script": "#!/bin/bash\n\nset -e\n\nexec \u003e \u003e(sudo tee /var/log/user-data.log|logger -t user-data -s 2\u003e/dev/console) 2\u003e\u00261\nsudo bash /ops/shared/scripts/client.sh \"gce\" 'project_name=hashicorp-393022 provider=gce tag_value=auto-join' \"https://releases.hashicorp.com/nomad/0.10.0/nomad_0.10.0_linux_amd64.zip\"\n\nNOMAD_HCL_PATH=\"/etc/nomad.d/nomad.hcl\"\nCLOUD_ENV=\"gce\"\n\nsed -i \"s/CONSUL_TOKEN/83a94b86-e145-b1e3-00d9-aca8e09caf30/g\" $N [...]
            "name": "nomad-client-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.243.208.108",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/networks/hashistack-nomad",
                "network_ip": "10.142.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/regions/us-east1/subnetworks/hashistack-nomad",
                "subnetwork_project": "hashicorp-393022"
              }
            ],
            "project": "hashicorp-393022",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/zones/us-east1-b/instances/nomad-client-1",
            "service_account": [
              {
                "email": "768276668000-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/logging.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "auto-join",
              "nomad-clients"
            ],
            "tags_fingerprint": "JjcUkMz5Nmg=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.hashistack"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/images/hashistack-20230815075041",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/zones/us-east1-b/disks/nomad-client-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hashicorp-393022/zones/us-east1-b/instances/nomad-client-2",
            "instance_id": "2984896162386016208",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "rs1JzvH6_Wg=",
            "metadata_startup_script": "#!/bin/bash\n\nset -e\n\nexec \u003e \u003e(sudo tee /var/log/user-data.log|logger -t user-data -s 2\u003e/dev/console) 2\u003e\u00261\nsudo bash /ops/shared/scripts/client.sh \"gce\" 'project_name=hashicorp-393022 provider=gce tag_value=auto-join' \"https://releases.hashicorp.com/nomad/0.10.0/nomad_0.10.0_linux_amd64.zip\"\n\nNOMAD_HCL_PATH=\"/etc/nomad.d/nomad.hcl\"\nCLOUD_ENV=\"gce\"\n\nsed -i \"s/CONSUL_TOKEN/83a94b86-e145-b1e3-00d9-aca8e09caf30/g\" $N [...]
            "name": "nomad-client-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.148.160.66",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/networks/hashistack-nomad",
                "network_ip": "10.142.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/regions/us-east1/subnetworks/hashistack-nomad",
                "subnetwork_project": "hashicorp-393022"
              }
            ],
            "project": "hashicorp-393022",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/zones/us-east1-b/instances/nomad-client-2",
            "service_account": [
              {
                "email": "768276668000-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/logging.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "auto-join",
              "nomad-clients"
            ],
            "tags_fingerprint": "JjcUkMz5Nmg=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.hashistack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/images/hashistack-20230815075041",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/zones/us-east1-b/disks/nomad-server-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hashicorp-393022/zones/us-east1-b/instances/nomad-server-0",
            "instance_id": "9070098796220905391",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "fcXyvNhRwVU=",
            "metadata_startup_script": "#!/bin/bash\n\nset -e\n\nexec \u003e \u003e(sudo tee /var/log/user-data.log|logger -t user-data -s 2\u003e/dev/console) 2\u003e\u00261\nsudo bash /ops/shared/scripts/server.sh \"gce\" \"3\" 'project_name=hashicorp-393022 provider=gce tag_value=auto-join' \"https://releases.hashicorp.com/nomad/0.10.0/nomad_0.10.0_linux_amd64.zip\"\n\nACL_DIRECTORY=\"/ops/shared/config\"\nCONSUL_BOOTSTRAP_TOKEN=\"/tmp/consul_bootstrap\"\nNOMAD_BOOTSTRAP_TOKEN=\"/tmp/nomad_bo [...]
            "name": "nomad-server-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.196.211.46",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/networks/hashistack-nomad",
                "network_ip": "10.142.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/regions/us-east1/subnetworks/hashistack-nomad",
                "subnetwork_project": "hashicorp-393022"
              }
            ],
            "project": "hashicorp-393022",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/zones/us-east1-b/instances/nomad-server-0",
            "service_account": [
              {
                "email": "768276668000-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/logging.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "auto-join"
            ],
            "tags_fingerprint": "mGIakEpFi0s=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.hashistack"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/images/hashistack-20230815075041",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/zones/us-east1-b/disks/nomad-server-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hashicorp-393022/zones/us-east1-b/instances/nomad-server-1",
            "instance_id": "7322844819614726096",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "fcXyvNhRwVU=",
            "metadata_startup_script": "#!/bin/bash\n\nset -e\n\nexec \u003e \u003e(sudo tee /var/log/user-data.log|logger -t user-data -s 2\u003e/dev/console) 2\u003e\u00261\nsudo bash /ops/shared/scripts/server.sh \"gce\" \"3\" 'project_name=hashicorp-393022 provider=gce tag_value=auto-join' \"https://releases.hashicorp.com/nomad/0.10.0/nomad_0.10.0_linux_amd64.zip\"\n\nACL_DIRECTORY=\"/ops/shared/config\"\nCONSUL_BOOTSTRAP_TOKEN=\"/tmp/consul_bootstrap\"\nNOMAD_BOOTSTRAP_TOKEN=\"/tmp/nomad_bo [...]
            "name": "nomad-server-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.138.166.56",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/networks/hashistack-nomad",
                "network_ip": "10.142.0.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/regions/us-east1/subnetworks/hashistack-nomad",
                "subnetwork_project": "hashicorp-393022"
              }
            ],
            "project": "hashicorp-393022",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/zones/us-east1-b/instances/nomad-server-1",
            "service_account": [
              {
                "email": "768276668000-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/logging.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "auto-join"
            ],
            "tags_fingerprint": "mGIakEpFi0s=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.hashistack"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/images/hashistack-20230815075041",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/zones/us-east1-b/disks/nomad-server-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hashicorp-393022/zones/us-east1-b/instances/nomad-server-2",
            "instance_id": "6463902882842408879",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "fcXyvNhRwVU=",
            "metadata_startup_script": "#!/bin/bash\n\nset -e\n\nexec \u003e \u003e(sudo tee /var/log/user-data.log|logger -t user-data -s 2\u003e/dev/console) 2\u003e\u00261\nsudo bash /ops/shared/scripts/server.sh \"gce\" \"3\" 'project_name=hashicorp-393022 provider=gce tag_value=auto-join' \"https://releases.hashicorp.com/nomad/0.10.0/nomad_0.10.0_linux_amd64.zip\"\n\nACL_DIRECTORY=\"/ops/shared/config\"\nCONSUL_BOOTSTRAP_TOKEN=\"/tmp/consul_bootstrap\"\nNOMAD_BOOTSTRAP_TOKEN=\"/tmp/nomad_bo [...]
            "name": "nomad-server-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.139.124.49",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/networks/hashistack-nomad",
                "network_ip": "10.142.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/regions/us-east1/subnetworks/hashistack-nomad",
                "subnetwork_project": "hashicorp-393022"
              }
            ],
            "project": "hashicorp-393022",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/zones/us-east1-b/instances/nomad-server-2",
            "service_account": [
              {
                "email": "768276668000-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/logging.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "auto-join"
            ],
            "tags_fingerprint": "mGIakEpFi0s=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.hashistack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "hashistack",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/hashicorp-393022/global/networks/hashistack-nomad",
            "mtu": 0,
            "name": "hashistack-nomad",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "hashicorp-393022",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hashicorp-393022/global/networks/hashistack-nomad"
          }
        }
      ]
    }
  ]
}